# call_me_maybe

./: .gitignore  Makefile  README.md  call_me_maybe_plan.md  error-recovery.md  fix_lint.py  optimizations.md  pyproject.toml  what-to-do.md
data/input/: function_calling_tests.json  functions_definition.json
dump/: decoder.py  fsm.py
llm_sdk/: pyproject.toml
llm_sdk/llm_sdk/: __init__.py
src/: __init__.py  __main__.py  builder.py  catch.py  decoder.py  fsm.py  llm.py  loader.py  main.py  masker.py  models.py  output.py  prompt.py  tokenizer.py  visualizer.py
tests/: __init__.py  models.txt  test_builder.py  test_loader.py  test_models.py  test_output.py  test_prompt.py  test_tokenizer.py
