[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Introduction to function calling in LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "vlnikola", email = "vlnikola@student.42prague.com" },
]
dependencies = [
    "llm-sdk",
    "numpy>=2.0.0",
    "pydantic>=2.10.0",
    "torch>=2.0.0",
]

[dependency-groups]
dev = [
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "pytest>=7.0.0",
]

[tool.uv.sources]
llm-sdk = { path = "./llm_sdk", editable = true }